--- a/MILP_CW5.ipynb
+++ b/MILP_CW5.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGWZjDPrFzuNYk4+42CkDP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 31,
       "metadata": {
         "id": "UIeEUEN9IPVI"
       },
@@ -60,7 +59,7 @@
         "import os\n",
         "import csv"
       ],
-      "execution_count": 4,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -70,12 +69,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "383d6e57",
-        "outputId": "a342aeda-a853-4452-e6be-8501432aac37"
+        "outputId": "006d2480-8232-4be7-dbe1-1bb51808ebcb"
       },
       "source": [
         "!pip install pulp"
       ],
-      "execution_count": 1,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,7 +93,7 @@
       "source": [
         "import pulp as pl"
       ],
-      "execution_count": 2,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -108,7 +107,7 @@
       "metadata": {
         "id": "hmd0R1kcJhPX"
       },
-      "execution_count": 6,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -130,7 +129,7 @@
         "etype = {\"Max\": \"P\", \"Jiwa\": \"P\", \"Fore\": \"P\", \"Donna\": \"F\", \"Paul\": \"F\"}\n",
         "minWeekly_default = {\"Max\": 12, \"Jiwa\": 12, \"Fore\": 12, \"Donna\": 36, \"Paul\": 36}"
       ],
-      "execution_count": 7,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -141,7 +140,7 @@
       "metadata": {
         "id": "sevIA5IPLNRJ"
       },
-      "execution_count": 8,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -152,16 +151,7 @@
       "metadata": {
         "id": "ylqUvgDOOI_W"
       },
-      "execution_count": 9,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "e2n7ijO7OxQ8"
-      },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -170,10 +160,442 @@
         "id": "fe21eeb2"
       },
       "source": [
-        "blocks = {1: \"07:00-11:00\", 2: \"11:00-15:00\", 3: \"14:00-15:00\", 4: \"18:00-23:00\"}"
+        "blocks = {1: \"07:00-11:00\", 2: \"11:00-15:00\", 3: \"15:00-19:00\", 4: \"19:00-23:00\"}\n",
+        "block_ids = list(blocks.keys())"
       ],
-      "execution_count": 10,
+      "execution_count": 39,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def print_schedule(y_vars):\n",
+        "    for d in days:\n",
+        "        print(f\"\\n{day_names[d]}\")\n",
+        "        for b in block_ids:\n",
+        "            assigned = [o for o in baristas if y_vars[o, d, b].varValue == 1]\n",
+        "            print(f\"  Block {b} ({blocks[b]}): {', '.join(assigned) if assigned else 'None'}\")"
+      ],
+      "metadata": {
+        "id": "Bz2yl1B9Pvrm"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "mathematical model"
+      ],
+      "metadata": {
+        "id": "oZZz0F0gQyI5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = pl.LpProblem(\"Barista_Scheduling\", pl.LpMinimize)"
+      ],
+      "metadata": {
+        "id": "8AQWfftQQt_Q"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "decision variable ​￼"
+      ],
+      "metadata": {
+        "id": "arKQ15LsSRMs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y = pl.LpVariable.dicts(\n",
+        "    \"y\",\n",
+        "    ((o, d, b) for o in baristas for d in days for b in blocks),\n",
+        "    cat=\"Binary\"\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "0CMNnm2uSGOo"
+      },
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Minimise Cost"
+      ],
+      "metadata": {
+        "id": "-V-tcUEKTfry"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model += pl.lpSum(H * cost[o] * y[o, d, b] for o in baristas for d in days for b in blocks)"
+      ],
+      "metadata": {
+        "id": "Nb7EDEQ_TZdG"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Constraints**"
+      ],
+      "metadata": {
+        "id": "KWLVmfqqUh9a"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Coverage (one barista per block)"
+      ],
+      "metadata": {
+        "id": "5g3sZJzkVpgi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for d in days:\n",
+        "    for b in blocks:\n",
+        "        model += pl.lpSum(y[o, d, b] for o in baristas) >= 1"
+      ],
+      "metadata": {
+        "id": "xKuOyNkpUtDE"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Per‑day availability (hours)"
+      ],
+      "metadata": {
+        "id": "uf8LJxriWPEu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for o in baristas:\n",
+        "    for d in days:\n",
+        "        model += H * pl.lpSum(y[o, d, b] for b in blocks) <= avail[(o, d)]"
+      ],
+      "metadata": {
+        "id": "ggP60S8OWLmz"
+      },
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Daily block limit"
+      ],
+      "metadata": {
+        "id": "vC1njLczW_Qg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for o in baristas:\n",
+        "    for d in days:\n",
+        "        if etype[o] == \"P\":  # Part-time\n",
+        "            model += pl.lpSum(y[o, d, b] for b in blocks) <= 2\n",
+        "        if etype[o] == \"F\":  # Full-time\n",
+        "            model += pl.lpSum(y[o, d, b] for b in blocks) <= 3"
+      ],
+      "metadata": {
+        "id": "vRopCce8XA7_"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Weekly minimum hours"
+      ],
+      "metadata": {
+        "id": "Pd3dqUh9XsBG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for o in baristas:\n",
+        "    model += H * pl.lpSum(y[o, d, b] for d in days for b in blocks) >= minWeekly_default[o]"
+      ],
+      "metadata": {
+        "id": "v8lCsSOUXshJ"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Binary variables (the problem)"
+      ],
+      "metadata": {
+        "id": "TBqqpIT6YAF5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*   **cat=\"Binary\"** part automatically enforces that each variable is either 0 or 1."
+      ],
+      "metadata": {
+        "id": "Sr7ftIZ4YUA2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Big Picture**\n",
+        "\n",
+        "•  Coverage → shop never empty.\n",
+        "\n",
+        "•  Per-day Availability → respect daily limits.\n",
+        "\n",
+        "•  Daily limits → enforce part/full-time rules.\n",
+        "\n",
+        "•  Weekly minimums → guarantee fair hours.\n",
+        "\n",
+        "•  Binary variables → clean yes/no assignments.\n",
+        "\n",
+        "---\n",
+        "This show each assignment of a barista to a block on a day as yes/no. Then, it will choose which are yes (1) and which are no (0)\n"
+      ],
+      "metadata": {
+        "id": "SRtcw9tUZFC2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Solving part**"
+      ],
+      "metadata": {
+        "id": "_GK1OoRxajdu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Solve the Model"
+      ],
+      "metadata": {
+        "id": "qqxxxjuIfKc0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.solve()\n",
+        "\n",
+        "total_calculated_cost = 0\n",
+        "print(\"Individual Barista Costs:\")\n",
+        "for o in baristas:\n",
+        "    # Get total hours for the barista\n",
+        "    hours_worked = sum(H * y[o, d, b].varValue for d in days for b in block_ids)\n",
+        "\n",
+        "    # Get hourly wage for the barista\n",
+        "    hourly_wage = cost[o]\n",
+        "\n",
+        "    # Calculate individual cost\n",
+        "    barista_cost = hours_worked * hourly_wage\n",
+        "    total_calculated_cost += barista_cost\n",
+        "    print(f\"  {o}: {hours_worked} hours * {hourly_wage} (hourly wage) = {barista_cost}\")\n",
+        "\n",
+        "print(f\"\\nTotal Calculated Cost: {total_calculated_cost}\")\n",
+        "print(f\"Total Cost from Model Objective: {pl.value(model.objective)}\")\n",
+        "\n",
+        "if total_calculated_cost == pl.value(model.objective):\n",
+        "    print(\"The calculated total cost matches the model's objective value.\")\n",
+        "else:\n",
+        "    print(\"There is a discrepancy between the calculated total cost and the model's objective value.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C1U9pUUqcndE",
+        "outputId": "7d3c347a-efec-4d4c-b607-eed7dcf02ef8"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Individual Barista Costs:\n",
+            "  Max: 12.0 hours * 50000 (hourly wage) = 600000.0\n",
+            "  Jiwa: 12.0 hours * 50000 (hourly wage) = 600000.0\n",
+            "  Fore: 16.0 hours * 50000 (hourly wage) = 800000.0\n",
+            "  Donna: 36.0 hours * 150000 (hourly wage) = 5400000.0\n",
+            "  Paul: 36.0 hours * 150000 (hourly wage) = 5400000.0\n",
+            "\n",
+            "Total Calculated Cost: 12800000.0\n",
+            "Total Cost from Model Objective: 12800000.0\n",
+            "The calculated total cost matches the model's objective value.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Fore works for 16 hours due to:\n",
+        "*   cheaper than full-timers\n",
+        "*   all rules are still respecting all contraints.\n",
+        "*   Fore has 8 hours available on most weekdays\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "srXvhzbZekZf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Weekly Hours per Barista"
+      ],
+      "metadata": {
+        "id": "zZnViiWLfHRr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Weekly Hours per Barista:\")\n",
+        "for o in baristas:\n",
+        "    total_weekly_hours = sum(H * y[o, d, b].varValue for d in days for b in block_ids)\n",
+        "    print(f\"  {o}: {total_weekly_hours} hours\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-cPOG32OfCwB",
+        "outputId": "ec2f8a3e-4f14-44ce-9dba-fbb01ade73eb"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Weekly Hours per Barista:\n",
+            "  Max: 12.0 hours\n",
+            "  Jiwa: 12.0 hours\n",
+            "  Fore: 16.0 hours\n",
+            "  Donna: 36.0 hours\n",
+            "  Paul: 36.0 hours\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Daily Schedule (Readable)"
+      ],
+      "metadata": {
+        "id": "aXXtkYOQfm-p"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def print_schedule(y_vars):\n",
+        "    for d_id, d_name in days.items():\n",
+        "        print(f\"\\n{d_name}\")\n",
+        "        for b_id in block_ids:\n",
+        "            assigned = [o for o in baristas if y_vars[o, d_id, b_id].varValue == 1]\n",
+        "            print(f\"  Block {b_id} ({blocks[b_id]}): {', '.join(assigned) if assigned else 'None'}\")\n",
+        "\n",
+        "print_schedule(y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W8osxurQfo1b",
+        "outputId": "88a90e41-e1bf-4fe0-e9ae-5b6da0b6a7b2"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Monday\n",
+            "  Block 1 (07:00-11:00): Donna\n",
+            "  Block 2 (11:00-15:00): Paul\n",
+            "  Block 3 (15:00-19:00): Max\n",
+            "  Block 4 (19:00-23:00): Jiwa\n",
+            "\n",
+            "Tuesday\n",
+            "  Block 1 (07:00-11:00): Donna\n",
+            "  Block 2 (11:00-15:00): Donna\n",
+            "  Block 3 (15:00-19:00): Jiwa\n",
+            "  Block 4 (19:00-23:00): Max\n",
+            "\n",
+            "Wednesday\n",
+            "  Block 1 (07:00-11:00): Paul\n",
+            "  Block 2 (11:00-15:00): Fore\n",
+            "  Block 3 (15:00-19:00): Fore\n",
+            "  Block 4 (19:00-23:00): Paul\n",
+            "\n",
+            "Thursday\n",
+            "  Block 1 (07:00-11:00): Donna\n",
+            "  Block 2 (11:00-15:00): Paul\n",
+            "  Block 3 (15:00-19:00): Donna\n",
+            "  Block 4 (19:00-23:00): Paul\n",
+            "\n",
+            "Friday\n",
+            "  Block 1 (07:00-11:00): Paul\n",
+            "  Block 2 (11:00-15:00): Fore\n",
+            "  Block 3 (15:00-19:00): Fore\n",
+            "  Block 4 (19:00-23:00): Paul\n",
+            "\n",
+            "Saturday\n",
+            "  Block 1 (07:00-11:00): Donna\n",
+            "  Block 2 (11:00-15:00): Jiwa\n",
+            "  Block 3 (15:00-19:00): Donna\n",
+            "  Block 4 (19:00-23:00): Max\n",
+            "\n",
+            "Sunday\n",
+            "  Block 1 (07:00-11:00): Paul\n",
+            "  Block 2 (11:00-15:00): Donna\n",
+            "  Block 3 (15:00-19:00): Paul\n",
+            "  Block 4 (19:00-23:00): Donna\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "GunH0ZH2g6hL"
+      }
     }
   ]
 }
