--- a/MILP_CW5.ipynb
+++ b/MILP_CW5.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 281,
+      "execution_count": 1,
       "metadata": {
         "id": "UIeEUEN9IPVI"
       },
@@ -59,7 +59,7 @@
         "import os\n",
         "import csv"
       ],
-      "execution_count": 282,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -69,12 +69,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "383d6e57",
-        "outputId": "df3a4a4a-9b59-4dfc-ec82-393a50cb0d5d"
+        "outputId": "2ab8b134-0529-41bc-cabb-8c34c6c133c4"
       },
       "source": [
         "!pip install pulp"
       ],
-      "execution_count": 283,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,7 +93,7 @@
       "source": [
         "import pulp as pl"
       ],
-      "execution_count": 284,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "hmd0R1kcJhPX"
       },
-      "execution_count": 285,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -129,7 +129,7 @@
         "etype = {\"Max\": \"P\", \"Jiwa\": \"P\", \"Fore\": \"P\", \"Donna\": \"F\", \"Paul\": \"F\"}\n",
         "minWeekly_default = {\"Max\": 12, \"Jiwa\": 12, \"Fore\": 12, \"Donna\": 36, \"Paul\": 36}"
       ],
-      "execution_count": 286,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -140,7 +140,7 @@
       "metadata": {
         "id": "sevIA5IPLNRJ"
       },
-      "execution_count": 287,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -151,7 +151,7 @@
       "metadata": {
         "id": "ylqUvgDOOI_W"
       },
-      "execution_count": 288,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -163,7 +163,7 @@
         "blocks = {1: \"07:00-11:00\", 2: \"11:00-15:00\", 3: \"15:00-19:00\", 4: \"19:00-23:00\"}\n",
         "block_ids = list(blocks.keys())"
       ],
-      "execution_count": 289,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -179,7 +179,7 @@
       "metadata": {
         "id": "Bz2yl1B9Pvrm"
       },
-      "execution_count": 290,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -199,7 +199,7 @@
       "metadata": {
         "id": "8AQWfftQQt_Q"
       },
-      "execution_count": 291,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -223,7 +223,7 @@
       "metadata": {
         "id": "0CMNnm2uSGOo"
       },
-      "execution_count": 292,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -243,7 +243,7 @@
       "metadata": {
         "id": "Nb7EDEQ_TZdG"
       },
-      "execution_count": 293,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -274,7 +274,7 @@
       "metadata": {
         "id": "xKuOyNkpUtDE"
       },
-      "execution_count": 294,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -296,7 +296,7 @@
       "metadata": {
         "id": "ggP60S8OWLmz"
       },
-      "execution_count": 295,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -321,7 +321,7 @@
       "metadata": {
         "id": "vRopCce8XA7_"
       },
-      "execution_count": 296,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -342,7 +342,7 @@
       "metadata": {
         "id": "v8lCsSOUXshJ"
       },
-      "execution_count": 297,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -435,9 +435,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C1U9pUUqcndE",
-        "outputId": "8ad513f4-9d56-4d00-c17e-921c90b70f17"
+        "outputId": "874238e2-a95e-45e6-ded2-0f73aecb301a"
       },
-      "execution_count": 298,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -492,9 +492,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-cPOG32OfCwB",
-        "outputId": "87dbb1e6-7765-4eff-98bc-2476f05a2b4a"
+        "outputId": "3cabfa34-522b-4538-f467-5ffa225a02d2"
       },
-      "execution_count": 299,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -536,9 +536,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W8osxurQfo1b",
-        "outputId": "ac3fe937-be35-47f3-ddc0-1579b3374a77"
+        "outputId": "cb50fb75-f161-44ef-f7b0-94ab50ad337d"
       },
-      "execution_count": 300,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -589,15 +589,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "tVLhMV_pmSsK"
-      },
-      "execution_count": 300,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -691,7 +682,7 @@
       "metadata": {
         "id": "gdP9JlxN0s8-"
       },
-      "execution_count": 301,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -706,9 +697,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XP_1_o8U0zcG",
-        "outputId": "3d8451fa-570d-469d-d39a-93c9ddad6919"
+        "outputId": "baabdbb5-9f12-47e3-ff2a-e0d1ad56f2cf"
       },
-      "execution_count": 302,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -727,13 +718,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2ec83641",
-        "outputId": "444c38e1-0cfe-44f5-c9d0-874db7143175"
+        "outputId": "d4575263-f011-4dac-b8e1-a1bffe4950af"
       },
       "source": [
         "print(\"\\nSchedule with 3 blocks (closing early):\")\n",
         "print_schedule(y)"
       ],
-      "execution_count": 303,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -846,7 +837,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4c5997a1",
-        "outputId": "1950af19-ac4a-4fca-d256-6717254cbb7f"
+        "outputId": "a2d9e55c-484e-46bb-82ad-b326b9132024"
       },
       "source": [
         "minWeekly_default_updated = minWeekly_default.copy()\n",
@@ -859,7 +850,7 @@
         "print(\"Updated minWeekly_default dictionary:\")\n",
         "print(minWeekly_default)"
       ],
-      "execution_count": 304,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -926,7 +917,7 @@
         "for o in baristas:\n",
         "    model += H * pl.lpSum(y[o, d, b] for d in days for b in block_ids) >= minWeekly_default[o]\n"
       ],
-      "execution_count": 305,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -947,7 +938,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fabda623",
-        "outputId": "3040d07d-786f-400c-ff56-b22e6c76fcde"
+        "outputId": "ce251c9b-ea84-4424-e583-3c5c073d9377"
       },
       "source": [
         "model.solve()\n",
@@ -959,7 +950,7 @@
         "    total_weekly_hours = sum(H * y[o, d, b].varValue for d in days for b in block_ids)\n",
         "    print(f\"  {o}: {total_weekly_hours} hours\")"
       ],
-      "execution_count": 306,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -1008,6 +999,239 @@
       "metadata": {
         "id": "LEL9X76iCS9-"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pulp as pl"
+      ],
+      "metadata": {
+        "id": "IjVTtgzqbeBp"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- Sets ---\n",
+        "baristas = [\"Max\",\"Jiwa\",\"Fore\",\"Donna\",\"Paul\"]\n",
+        "days = list(range(1,8))\n",
+        "block_ids = [1,2,3,4]   # 4 blocks per day"
+      ],
+      "metadata": {
+        "id": "76HRPbEubhL-"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- Parameters ---\n",
+        "H_block = 4\n",
+        "cost = {\"Max\":50000,\"Jiwa\":50000,\"Fore\":50000,\"Donna\":150000,\"Paul\":150000}\n",
+        "etype = {\"Max\":\"P\",\"Jiwa\":\"P\",\"Fore\":\"P\",\"Donna\":\"F\",\"Paul\":\"F\"}\n",
+        "minWeekly = {\"Max\":12,\"Jiwa\":12,\"Fore\":12,\"Donna\":36,\"Paul\":36}\n",
+        "avail = {(\"Max\", 1): 8, (\"Max\", 2): 8, (\"Max\", 3): 8, (\"Max\", 4): 0, (\"Max\", 5): 8, (\"Max\", 6): 4, (\"Max\", 7): 4, (\"Jiwa\", 1): 4, (\"Jiwa\", 2): 4, (\"Jiwa\", 3): 8, (\"Jiwa\", 4): 8, (\"Jiwa\", 5): 0, (\"Jiwa\", 6): 4, (\"Jiwa\", 7): 0, (\"Fore\", 1): 8, (\"Fore\", 2): 0, (\"Fore\", 3): 8, (\"Fore\", 4): 8, (\"Fore\", 5): 8, (\"Fore\", 6): 8, (\"Fore\", 7): 0, (\"Donna\", 1): 12, (\"Donna\", 2): 12, (\"Donna\", 3): 12, (\"Donna\", 4): 12, (\"Donna\", 5): 12, (\"Donna\", 6): 12, (\"Donna\", 7): 8, (\"Paul\", 1): 12, (\"Paul\", 2): 8, (\"Paul\", 3): 12, (\"Paul\", 4): 12, (\"Paul\", 5): 8, (\"Paul\", 6): 12, (\"Paul\", 7): 12}"
+      ],
+      "metadata": {
+        "id": "PazR1wqXbjhc"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- Model ---\n",
+        "model = pl.LpProblem(\"Cafe_Fairness\", pl.LpMinimize)"
+      ],
+      "metadata": {
+        "id": "0DeqPI04bpMN"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y = pl.LpVariable.dicts(\"y\", (baristas, days, block_ids), cat=\"Binary\")\n",
+        "\n",
+        "Hbar = {}\n",
+        "for o in baristas:\n",
+        "    Hbar[o] = H_block * pl.lpSum(y[o][d][b] for d in days for b in block_ids)"
+      ],
+      "metadata": {
+        "id": "WrGEbBBrc80u"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Coverage\n",
+        "for d in days:\n",
+        "    for b in block_ids:\n",
+        "        model += pl.lpSum(y[o][d][b] for o in baristas) >= 1\n",
+        "\n",
+        "# Per-day availability (hours)\n",
+        "for o in baristas:\n",
+        "    for d in days:\n",
+        "        model += H_block * pl.lpSum(y[o][d][b] for b in block_ids) <= avail[(o, d)]"
+      ],
+      "metadata": {
+        "id": "UYAHTmmIdsDI"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Daily limits\n",
+        "for o in baristas:\n",
+        "    for d in days:\n",
+        "        if etype[o] == \"P\":\n",
+        "            model += pl.lpSum(y[o][d][b] for b in block_ids) <= 2\n",
+        "        else:\n",
+        "            model += pl.lpSum(y[o][d][b] for b in block_ids) <= 3"
+      ],
+      "metadata": {
+        "id": "R-Z33zxfdwpi"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Weekly minimums\n",
+        "for o in baristas:\n",
+        "    model += Hbar[o] >= minWeekly[o]"
+      ],
+      "metadata": {
+        "id": "uvjmTd1zd2nb"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "lRxhhZd0ep3V"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Fairness Variables"
+      ],
+      "metadata": {
+        "id": "1_3kBXl0fTEq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Hmax = pl.LpVariable(\"Hmax\", lowBound=0)\n",
+        "Hmin = pl.LpVariable(\"Hmin\", lowBound=0)\n",
+        "\n",
+        "for o in baristas:\n",
+        "    model += Hbar[o] <= Hmax\n",
+        "    model += Hbar[o] >= Hmin"
+      ],
+      "metadata": {
+        "id": "pBpgnDUGe7zw"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Budget Constraint"
+      ],
+      "metadata": {
+        "id": "mvUw0RcVfUac"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "baseline_cost = pl.value(total_cost)   # after solving baseline model"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 139
+        },
+        "id": "uitXduUaljsH",
+        "outputId": "f8d77dfd-b1bf-42ac-e423-e0530ee12915"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'total_cost' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-140675484.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbaseline_cost\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtotal_cost\u001b[0m\u001b[0;34m)\u001b[0m   \u001b[0;31m# after solving baseline model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'total_cost' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CCd7jxElfWsE"
+      },
+      "source": [
+        "baseline_cost = 12800000.0   # Baseline cost for comparison\n",
+        "total_cost = pl.lpSum(cost[o] * Hbar[o] for o in baristas)\n",
+        "model += total_cost <= 1.02 * baseline_cost # Budget constraint for fairness"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#objective\n",
+        "model += Hmax - Hmin"
+      ],
+      "metadata": {
+        "id": "ZFMG0sX-fkdC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "solve"
+      ],
+      "metadata": {
+        "id": "vs3rkVRvfqtB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!apt-get install -y glpk-utils\n"
+      ],
+      "metadata": {
+        "id": "nEDO4Jv9iJVh"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
